pilot mockup with full randomization

--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -35,6 +35,9 @@
 
     <!-- experiment file -->
     <script src="resources/index.js"></script>
+    <script src="resources/lists/stims.js"></script>
+    <script src="resources/lists/fillers.js"></script>
+    <script>var stims = eval(stimfile)</script>
 
 
 <!-- Load consent form
@@ -144,7 +147,7 @@ Otherwise, modified to whatever is required for you given your affliation.
 
 <p>This task is about the acceptability of English sentences.</p>
 
-<p>You will see a small dialogue between two individuals. First, please read the entire dialogue. Then, rate the acceptability of <b>the bolded sentence </b>on a scale of 1 to 7, where 1 is completely unacceptable, and 7 is completely acceptable.</p>
+<p>You will see a small dialogue between two individuals, Speaker A and Speaker B. First, please read the entire dialogue. Every dialogue begins with Speaker A and is followed by Speaker B's response. Rate the acceptability of Speaker's B response to Speaker A (in<b> bold</b>) on a scale of 1 to 7, where 1 is completely unacceptable, and 7 is completely acceptable.</p>
 
 <p>Please judge just <b>the bolded sentence,</b> based on how natural it sounds to you in this dialogue. Do not try to base your answer based on rules of grammar you might have learned in school. Instead, think about whether this sentence sounds like something a person you know might say in this same situation.</p>
 
@@ -161,7 +164,7 @@ Otherwise, modified to whatever is required for you given your affliation.
 <hr>
 
 <p class="prompt"></p>
-
+<p class="attcheck" hidden></p>
 
 <hr>
 
@@ -192,7 +195,6 @@ Otherwise, modified to whatever is required for you given your affliation.
 
 </style>
 
-
 <div class="vertical-radio-buttons" style = "padding-left:50;">
 <p>The <strong>bolded sentence&nbsp;</strong>is:</p>
 
@@ -204,6 +206,15 @@ Otherwise, modified to whatever is required for you given your affliation.
   <input type="radio" name="rating" value=3> 3<br>
   <input type="radio" name="rating" value=2> 2 <br>
   <input type="radio" name="rating" value=1> 1 - Completely unacceptable
+</div> 
+</div>
+
+<div class="truefalse-buttons" style = "padding-left:50;" hidden>
+<p>The <strong>bolded sentence&nbsp;</strong>is:</p>
+
+<div>
+  <input type="radio" name="truefalse" value="true"> True <br>
+  <input type="radio" name="truefalse" value="false"> False <p>
 </div> 
 </div>
 
