--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Stanford Linguistics Experiment - "How Likely"?</title>
+    <title>Stanford Linguistics - Rate the Sentences!</title>
 
     <!--JS-->
 
@@ -150,6 +150,8 @@ Otherwise, modified to whatever is required for you given your affliation.
 <p>You will see a small dialogue between two individuals, Speaker A and Speaker B. First, please read the entire dialogue. Every dialogue begins with Speaker A and is followed by Speaker B's response. Rate the acceptability of Speaker's B response to Speaker A (in<b> bold</b>) on a scale of 1 to 7, where 1 is completely unacceptable, and 7 is completely acceptable.</p>
 
 <p>Please judge just <b>the bolded sentence,</b> based on how natural it sounds to you in this dialogue. Do not try to base your answer based on rules of grammar you might have learned in school. Instead, think about whether this sentence sounds like something a person you know might say in this same situation.</p>
+
+<p>NOTE: After some dialogues, you'll be asked a short true/false comprehension question about what you've just read. These serve as attention checks; failing too many of them can affect your compensation. Thanks for participating!</p>
 
 <button onclick="_s.button()">Continue</button>
 </div>
