--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -102,7 +102,7 @@ $( "#verify_form" ).submit(function( event ) {
  <div class="slide" id="i0" >
     <p id="cocolab">Stanford Linguistics</p>
     <p id="instruct-text">This task is about rating sentences of English. The HIT should take ~10 minutes. Please pay attention, and thanks for participating!</p>
-    <button id="start_button" type="button">Continue</button>
+    <center><button id="start_button" type="button">Continue</button></center>
   </div>
 
 <!--Consent form used in Stanford linguistics department and is good for ling245.
@@ -138,7 +138,7 @@ Otherwise, modified to whatever is required for you given your affliation.
   <p>You may print this contact information for your records.</p>
   <p>If you agree to participate, please proceed to the study tasks.</p>
   </div>
-      <button onclick="_s.button()">Continue</button>
+     <center> <button onclick="_s.button()">Continue</button> </center>
 </div>
 
 <div class = "slide" id = "instructions">
@@ -153,7 +153,7 @@ Otherwise, modified to whatever is required for you given your affliation.
 
 <p>NOTE: After some dialogues, you'll be asked a short true/false comprehension question about what you've just read. These serve as attention checks; failing too many of them can affect your compensation. Thanks for participating!</p>
 
-<button onclick="_s.button()">Continue</button>
+<center><button onclick="_s.button()">Continue</button></center>
 </div>
  
 
@@ -220,9 +220,11 @@ Otherwise, modified to whatever is required for you given your affliation.
 </div> 
 </div>
 
-<button onclick="_s.button()">Continue</button>
+<p>
 
-<div class = "error" style="display:none"> Please make a selection before proceeding.</p>
+<center><button onclick="_s.button()">Continue</button></center>
+
+<div class = "error" style="display:none"><p> <center>Please make a selection before proceeding.</center></p>
 
 </div>
  
