stim edits, split into primed and neutral condition

--- a/experiment1/cond2.html
+++ b/experiment1/cond2.html
@@ -34,7 +34,7 @@
     <link href="resources/css/local-style.css" rel="stylesheet" type="text/css"/>
 
     <!-- experiment file -->
-    <script src="resources/index.js"></script>
+    <script src="resources/index_cond2.js"></script>
     <script src="resources/lists/stims.js"></script>
     <script src="resources/lists/fillers.js"></script>
     <script>var stims = eval(stimfile)</script>
